--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,3 +39,30 @@ a {
 .image-rounded {
   border-radius: 50%;
 }
+
+.section {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  position: relative;
+}
+
+.user-avatar {
+  border-radius: 50px;
+}
+
+.container {
+  font-family: arial;
+  font-size: 24px;
+  width: 350px;
+  height: 200px;
+}
+
+.child {
+  width: 50px;
+  height: 50px;
+  /* Center vertically and horizontally */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
