--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Tajawal&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url("https://fonts.googleapis.com/css2?family=Tajawal&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 html,
 body {
@@ -10,29 +10,28 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #090910;
-      max-width: 100%;
-    overflow-x: hidden;
-    
+  max-width: 100%;
+  overflow-x: hidden;
 }
 ::-webkit-scrollbar {
-    width: 12px;
-    background-color: transparent;
+  width: 12px;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-button {
-    display: none;
-    width: 0;
-    height: 0;
+  display: none;
+  width: 0;
+  height: 0;
 }
 
 ::-webkit-scrollbar-corner {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #4a4d52;
-    border: 2px solid #282a2d;
-    border-radius: 10px;
+  background-color: #4a4d52;
+  border: 2px solid #282a2d;
+  border-radius: 10px;
 }
 
 a {
@@ -75,9 +74,8 @@ a {
   position: relative;
 }
 
-
-.commandDropDownMenu{
-    background-color: #21262d;
+.commandDropDownMenu {
+  background-color: #21262d;
   padding: 8px 20px;
   border-radius: 5px;
   font-size: 16px;
@@ -85,21 +83,21 @@ a {
   cursor: pointer;
   display: flex;
   justify-content: space-between;
-    width: 500px;
+  width: 500px;
   transition: 500ms;
 }
 
 .commandDropDownMenu :hover {
-    background-color: white;
-    color: black;
-    cursor: pointer;
-  }
+  background-color: white;
+  color: black;
+  cursor: pointer;
+}
 
-  .commandDropDownMenu :active {
-    background-color: yellow;
-  }
+.commandDropDownMenu :active {
+  background-color: yellow;
+}
 
-  .center-screen {
+.center-screen {
   display: flex;
   justify-content: space-between;
 }
